--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,60 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>FmsV2</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <style type="text/css">
+    .startup {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      background-color: #ffffff;
+      color: white;
+    }
+
+    .img {
+      width: 200px;
+      margin-bottom: 25px;
+    }
+
+    .loader {
+      border: 8px solid #f3f3f3;
+      /* Light grey */
+      border-top: 8px solid #757575;
+      /* Blue */
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div class="startup">
+      <img class="img" src="assets/img/logo.png" loading="lazy" width="207" height="60" />
+      <div class="loader"></div>
+      <h4>Loading... </h4>
+    </div>
+  </app-root>
 </body>
+
 </html>
