--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 <body>
   <app-root>
     <div class="startup">
-      <img class="img" src="assets/img/logo.png" loading="lazy" width="207" height="60" />
+      <img class="img" src="img/logo.png" loading="lazy" width="207" height="60" />
       <div class="loader"></div>
       <h4>Loading... </h4>
     </div>
